test/expected/large/cacheserver/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: cacheserver
    foo.com/duversion: 1.2.11-20190909.1568059642843
    foo.com/version: 1.2.11
  labels:
    app.kubernetes.io/name: cacheserver
    helm.sh/chart: cacheserver-1.2.11
  name: cacheserver
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: cacheserver
    port: 40404
    targetPort: cacheserver
  selector:
    app.kubernetes.io/name: cacheserver
  type: ClusterIP
